syntax = "proto3";

package org.elasticsoftware.elasticactors.grpc;

option java_multiple_files = true;

// The greeting service definition.
service NodeService {
    // Sends a greeting
    rpc RequestState (StateRequest) returns (StateReply) {}
}

// The request message with the actor name.
message StateRequest {
    string actorName = 1;
}

// The response message with the current serialized actor state
message StateReply {
    bytes state = 1;
    uint64 stateGeneration = 2;
    string compressionMethod = 3;
}