syntax = "proto3";

package org.elasticsoftware.elasticactors.grpc;

option java_multiple_files = true;

// The service definition.
service ActorLifecycleService {
    // handle incoming message
    rpc HandleMessage (HandleMessageRequest) returns (ActorLifecycleResponse) {}
}

// The request message with the actor name.
message HandleMessageRequest {
    InternalMessage message = 1;
    ActorState state = 2;
}

message ActorLifecycleResponse {
    repeated InternalMessage messages = 1;
    ActorState state = 2;
}

message InternalMessage {
    string receiver = 1;
    string sender = 2;
    string payloadType = 3;
    bytes payload = 4;
    bytes id = 5;
    bool durable = 6;
    bool undeliverable = 7;
    repeated string receivers = 8;
    uint32 timeout = 9;
}

// The current serialized actor state
message ActorState {
    bytes state = 1;
    uint64 stateGeneration = 2;
    string compressionMethod = 3;
}